[package]
name = "telegram-bot-api"
version = "0.1.1"
edition = "2021"
authors = ["Galen <qtwork6688@gmail.com>"]
description = "Rust bindings for the Telegram Bot API"
repository = "https://github.com/tegramosx/telegram-bot-api"
readme = "README.md"
license = "MIT"
keywords = ["telegram", "telegram-bot", "telegram-bot-api", "bot-api"]

[dependencies]
reqwest = { version = "0.11", features = ["stream","json","multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
tokio-util = { version = "0.7.3", features = ["codec"] }
